#Include ProtoBuffer(cmake --help-module FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
##INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
##SET(args 
##    PROTOFILES foo.proto 
##    OUTPATH ${CMAKE_CURRENT_SOURCE_DIR}
##)
##PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${args})
##ADD_EXECUTABLE(bar bar.cc ${PROTO_SRCS} ${PROTO_HDRS})
#TARGET_LINK_LIBRARIES(bar ${PROTOBUF_LIBRARY})

AUX_SOURCE_DIRECTORY(./ srcModel)

ADD_LIBRARY(model STATIC ${srcModel})
TARGET_LINK_LIBRARIES(model ${PROTOBUF_LIBRARY})

